--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -78,6 +78,5 @@ jobs:
           gcloud run deploy rotter \
             --image gcr.io/${{ env.ACTION_GCP_CREDENTIALS }}/${{ env.SERVICE_NAME}}:$GITHUB_SHA \
             --allow-unauthenticated \
-            --region ${{ env.REGION }} \
-            --allow-unauthenticated
+            --region ${{ env.REGION }} 
       
