--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
